--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>Портфолио педагога</title>
+    <meta name="description" content="Сайт-портфолио педагога: достижения, материалы, новости, контакты и обратная связь." />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://your-domain.com/" />
   </head>
   <body>
     <div id="root"></div>
