--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,10 @@
 <!doctype html>
 <html lang="ru">
+  <script>
+    try {
+      if (localStorage.getItem('accessibilityMode') === '1') document.documentElement.classList.add('accessibility-mode');
+    } catch (e) {}
+  </script>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
