--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,20 +1,23 @@
 <!doctype html>
 <html lang="ru">
-  <script>
-    try {
-      if (localStorage.getItem('accessibilityMode') === '1') document.documentElement.classList.add('accessibility-mode');
-    } catch (e) {}
-  </script>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Портфолио педагога</title>
-    <meta name="description" content="Сайт-портфолио педагога: достижения, материалы, новости, контакты и обратная связь." />
-    <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://your-domain.com/" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<script>
+  try {
+    if (localStorage.getItem('accessibilityMode') === '1') document.documentElement.classList.add('accessibility-mode');
+  } catch (e) { }
+</script>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Портфолио педагога</title>
+  <meta name="description" content="Крумова Эльмира Мамедовна" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://your-domain.com/" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
