--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
   <script>
     try {
       if (localStorage.getItem('accessibilityMode') === '1') document.documentElement.classList.add('accessibility-mode');
+      if (localStorage.getItem('darkTheme') === '1') document.documentElement.classList.add('dark-theme');
     } catch (e) {}
   </script>
   <meta charset="UTF-8" />
