--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,9 +10,11 @@
   </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Крумова Эльмира Мамедовна — О себе</title>
-  <meta name="description" content="Крумова Эльмира Мамедовна. О себе, достижения, материалы, новости, контакты и полезные ссылки." />
+  <title>Крумова Эльмира Мамедовна, Сургут — О себе</title>
+  <meta name="description"
+    content="Крумова Эльмира Мамедовна. О себе, достижения, материалы, новости, контакты и полезные ссылки." />
   <meta name="robots" content="index, follow" />
+  <meta name="google-site-verification" content="google133532a2708fa08e" />
   <link rel="canonical" href="https://krumova0elmira0mamedovna.ru/" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://krumova0elmira0mamedovna.ru/" />
